--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 <table>
   <thead>
     <tr>
-      <th style="text-align: left">name</th>
       <th style="text-align: left">what</th>
+      <th style="text-align: left">how</th>
       <th style="text-align: left">more info</th>
     </tr>
   </thead>
