--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           
             <li id="rt" class="download"><a class="buttons" href="https://www.dropbox.com/s/7hj8zrl1ohqbyqz/Release.zip?dl=0" target="_blank">Download ZIP</a></li>
           
-          <li><a id="rt" class="buttons github" href="https://github.com/OpenCVExamples/OpenCVExamples" target="_blank">View On GitHub</a></li>
+          <li><a id="rt" class="buttons github" href="https://github.com/OpenCVExamples/OpenCVExamples.github.io" target="_blank">View On GitHub</a></li>
 
 		
         </ul>
